--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Corsend Downloader</string>
-    <string name="app_version">v1 ALPHA</string>
+    <string name="app_version">v1.1 ALPHA</string>
 
     <string name="collect_info">Collecting info…</string>
     
@@ -24,4 +24,6 @@
 
     <string name="developer">dest4590 / Purpl3</string>
     <string name="underDeveloper">Creator of the Corsend, CorsendDownloader</string>
+
+    <string name="openAfterInstall">Install app after download</string>
 </resources>
